force-app/main/default/objects/Plan_Objective__c/Plan_Objective__c.object-meta.xml
<CustomObject>
    <description>Strategic objective on an Account Plan (use native AccountPlanObjective when on native plans). Feeds the objectives panel LWC.</description>
    <label>Plan Objective</label>
    <nameField>
        <label>Objective Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Objectives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>