force-app/main/default/objects/Plan_Objective__c/fields/Current_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Amount__c</fullName>
    <label>Current Amount</label>
    <description>Auto-calculated from Whitespace_Cell__c ARR for the objective's Linked Family, whenever set. Recomputed on every WhitespaceGenerationService.generate() run — not manually editable for family-linked objectives.</description>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>