force-app/main/default/objects/Plan_Objective__c/fields/Linked_Family__c.field-meta.xml
<CustomField>
    <fullName>Linked_Family__c</fullName>
    <label>Linked Family</label>
    <type>Lookup</type>
    <referenceTo>Plan_Product_Family__c</referenceTo>
    <relationshipName>Plan_Objectives</relationshipName>
    <relationshipLabel>Plan Objectives</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>