force-app/main/default/objects/Plan_Objective__c/fields/OwnerObj__c.field-meta.xml
<CustomField>
    <fullName>OwnerObj__c</fullName>
    <label>Objective Owner</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Owned_Plan_Objectives</relationshipName>
    <relationshipLabel>Plan Objectives (Owned)</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>