force-app/main/default/objects/Plan_Objective__c/fields/Progress_Pct__c.field-meta.xml
<CustomField>
    <fullName>Progress_Pct__c</fullName>
    <label>Progress %</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>