force-app/main/default/objects/Plan_Objective__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Not_Started</fullName><default>true</default><label>Not Started</label></value>
            <value><fullName>In_Progress</fullName><default>false</default><label>In Progress</label></value>
            <value><fullName>At_Risk</fullName><default>false</default><label>At Risk</label></value>
            <value><fullName>Done</fullName><default>false</default><label>Done</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>